[package]
name = "elf"
version = "0.2.0"
authors = ["Thomas WACHE <thomas@wache.fr>"]
edition = "2018"

[lib]
name = "elf"
crate-type = ["staticlib", "dylib", "rlib"]

[dependencies]
enum-primitive-derive = "^0.1"
num-traits = "^0.2"
bitflags = "^1.2"
# failure = "^0.1"
exe = { path = "../exe", version = "^0.1" }
nom = "^5"

[dev-dependencies]
clap = "^2"
